# MeterReader

./: .gitignore  CMakeLists.txt  LICENSE  README.md
android/: AndroidManifest.xml  build.gradle
darwin/: EdmiCsa.entitlements  Info.plist  Info.plist.bak.plist
dlms/include/: AES-GCM.h  AES.h  APDU.h  AdjacentCell.h  ApplicationContextName.h  AttributeCollection.h  Authentication.h  AuthenticationMechanismName.h  BitString.h  ByteBuffer.h  ChargePerUnitScaling.h  ChargeTable.h  ChipperingEnums.h  Cipher.h  Commodity.h  CreditChargeConfiguration.h  Currency.h  DLMS.h  DLMSAccessItem.h  DLMSAccount.h  DLMSActionItem.h  DLMSActionSchedule.h  DLMSActionSet.h  DLMSActivityCalendar.h  DLMSArbitrator.h  DLMSAssociationLogicalName.h  DLMSAssociationShortName.h  DLMSAttribute.h  DLMSCaptureObject.h  DLMSCertificateInfo.h  DLMSCharge.h  DLMSClient.h  DLMSClock.h  DLMSCommunicationPortProtection.h  DLMSCompactData.h  DLMSConnectionEventArgs.h  DLMSContextType.h  DLMSConverter.h  DLMSCredit.h  DLMSData.h  (+124 more)
dlms/src/: AES-GCM.cpp  AES.cpp  APDU.cpp  AdjacentCell.cpp  ApplicationContextName.cpp  AuthenticationMechanismName.cpp  BitString.cpp  ByteBuffer.cpp  ChargePerUnitScaling.cpp  ChargeTable.cpp  Cipher.cpp  Commodity.cpp  CreditChargeConfiguration.cpp  Currency.cpp  DLMS.cpp  DLMSAccessItem.cpp  DLMSAccount.cpp  DLMSActionItem.cpp  DLMSActionSchedule.cpp  DLMSActionSet.cpp  DLMSActivityCalendar.cpp  DLMSArbitrator.cpp  DLMSAssociationLogicalName.cpp  DLMSAssociationShortName.cpp  DLMSCaptureObject.cpp  DLMSCertificateInfo.cpp  DLMSCharge.cpp  DLMSClient.cpp  DLMSClock.cpp  DLMSCommunicationPortProtection.cpp  DLMSCompactData.cpp  DLMSContextType.cpp  DLMSConverter.cpp  DLMSCredit.cpp  DLMSData.cpp  DLMSDayProfile.cpp  DLMSDayProfileAction.cpp  DLMSDemandRegister.cpp  DLMSDisconnectControl.cpp  DLMSEmergencyProfile.cpp  (+95 more)
include/: ApplicationTheme.hpp  BleCentral.hpp  BluetoothInterface.hpp  CameraInterface.hpp  CommunicationClient.hpp  Controller.hpp  DataEntity.hpp  DataInterface.hpp  DlmsClient.hpp  EntityAlarm.hpp  EntityAlarmFilter.hpp  EntityMeter.hpp  EntityMeterSettings.hpp  EntityStatisticsEnergy.hpp  EntityStatisticsPowerQuality.hpp  EntityTariff.hpp  EntityToken.hpp  EntityTokenHistory.hpp  EntityUserInfo.hpp  GraphData.hpp  Help.hpp  IWorkFlow.hpp  Logger.hpp  MeterReader.hpp  Mk7Mi.hpp  OSInitializer.hpp  ProtocolState.hpp  UICommandHandler.hpp  Version.hpp  WorkFlowAddMeter.hpp  WorkFlowConnectMeter.hpp  WorkFlowDisconnectMeter.hpp  WorkFlowKeepAlive.hpp  WorkFlowTokenTransfer.hpp
qzxing/include/: BitMatrixCursor.h  ZXingQtReader.h  zueci_sb.h
qzxing/src/: MultiFormatReader.cpp  MultiFormatWriter.cpp  TextDecoder.cpp  TextEncoder.cpp  ZXingQtReader.cpp
resources/: MeterReader.qrc
resources/qml/: AddMeter.qml  AddTariff.qml  AddToken.qml  AlarmSettings.qml  Alarms.qml  AvailableMeters.qml  AvailableTariffs.qml  AvailableTokens.qml  CircularProgressBar.qml  Contact.qml  CreateUserStage1.qml  CreateUserStage2.qml  CreateUserStage3.qml  CustomBarChart.qml  CustomButton.qml  CustomDatePicker.qml  CustomLineChart.qml  CustomSelector.qml  CustomTab.qml  CustomTrendCard.qml  Dashboard.qml  DatePicker.qml  Energy.qml  FontSizer.qml  Header.qml  Help.qml  Login.qml  MainWindow.qml  NumberKeypad.qml  PowerQuality.qml  QRCodeScanner.qml  ResetPasscodeStage1.qml  ResetPasscodeStage2.qml  ResetPasscodeStage3.qml  Settings.qml  SplashScreen.qml  Trace.qml
src/: BleCentralAndroid.cpp  BleCentralDarwin.cpp  BleCentralLinux.cpp  BleCentralWindows.cpp  BluetoothInterface.cpp  CameraInterface.cpp  CommunicationClient.cpp  Controller.cpp  ControllerAppMgmt.cpp  ControllerComm.cpp  ControllerUserMgmt.cpp  DataEntity.cpp  DataInterface.cpp  DlmsClient.cpp  EntityAlarm.cpp  EntityAlarmFilter.cpp  EntityMeter.cpp  EntityMeterSettings.cpp  EntityStatisticsEnergy.cpp  EntityStatisticsPowerQuality.cpp  EntityTariff.cpp  EntityToken.cpp  EntityTokenHistory.cpp  EntityUserInfo.cpp  Help.cpp  IWorkFlow.cpp  Logger.cpp  MeterReader.cpp  Mk7Mi.cpp  OSInitializerAndroid.cpp  OSInitializerDarwin.cpp  OSInitializerLinux.cpp  OSInitializerWindows.cpp  UICommandHandler.cpp  WorkFlowAddMeter.cpp  WorkFlowConnectMeter.cpp  WorkFlowDisconnectMeter.cpp  WorkFlowKeepAlive.cpp  WorkFlowTokenTransfer.cpp  main.cpp
testingdata/: mindteck_meters.txt
